--- a/frontend/issues/jade/issueComp.jade
+++ b/frontend/issues/jade/issueComp.jade
@@ -35,20 +35,20 @@ div(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true")
 				div(layout="row")
 					md-input-container.issueCompItemStatus(flex)
 						label Priority
-						md-select(ng-model="$ctrl.issueData.priority", ng-change="$ctrl.statusChange()", ng-disabled="!$ctrl.canUpdate")
+						md-select(ng-model="$ctrl.issueData.priority", ng-change="$ctrl.statusChange()")
 							md-option(ng-repeat="priority in $ctrl.priorities", value="{{priority.value}}") {{priority.label}}
 					md-input-container.issueCompItemStatus(flex)
 						label Status
-						md-select(ng-model="$ctrl.issueData.status", ng-change="$ctrl.statusChange()", ng-disabled="!$ctrl.canUpdate")
-							md-option(ng-repeat="status in $ctrl.statuses", value="{{status.value}}") {{status.label}}
+						md-select(ng-model="$ctrl.issueData.status", ng-change="$ctrl.statusChange()")
+							md-option(ng-repeat="status in $ctrl.statuses", value="{{status.value}}", ng-disabled="status.disabled") {{status.label}}
 				div(layout="row")
 					md-input-container(flex)
 						label Assign
-						md-select(ng-model="$ctrl.issueData.assigned_roles[0]", ng-change="$ctrl.statusChange()", ng-disabled="!$ctrl.canUpdate")
+						md-select(ng-model="$ctrl.issueData.assigned_roles[0]", ng-change="$ctrl.statusChange()")
 							md-option(ng-repeat="role in $ctrl.projectRoles", value="{{role}}") {{role}}
 					md-input-container(flex)
 						label Type
-						md-select(ng-model="$ctrl.issueData.topic_type", ng-change="$ctrl.statusChange()", ng-disabled="!$ctrl.canUpdate")
+						md-select(ng-model="$ctrl.issueData.topic_type", ng-change="$ctrl.statusChange()")
 							md-option(ng-repeat="type in $ctrl.topic_types", value="{{type.value}}") {{type.label}}
 
 	md-divider
