--- a/frontend/issues/jade/issueComp.jade
+++ b/frontend/issues/jade/issueComp.jade
@@ -2,23 +2,23 @@ div(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true")
 	div
 		// Title
 		.issueCompItemContainer(layout="column", layout-align="start", flex)
-			#issueRoleIndicator
+			div(layout="row")
+				#issueRoleIndicator
+				div(ng-if="!$ctrl.data")
+					md-input-container#issueCompTitleInput(flex)
+						label Title
+						input(
+						type="text"
+						ng-model="$ctrl.issueData.name"
+						ng-change="$ctrl.nameChange()"
+						ng-disabled="$ctrl.data"
+						aria-label="Title"
+						tdr-focus="true"
+						required)
+				#issueCompTitle(ng-if="$ctrl.data")
+					label {{$ctrl.issueData.name}}
 
-			div(ng-if="!$ctrl.data", flex, layout="column")
-				md-input-container.issueComp(flex)
-					label Title
-					input(
-					type="text"
-					ng-model="$ctrl.issueData.name"
-					ng-change="$ctrl.nameChange()"
-					ng-disabled="$ctrl.data"
-					aria-label="Title"
-					tdr-focus="true"
-					required)
-			#issueCompTitle(ng-if="$ctrl.data")
-				label {{$ctrl.issueData.name}}
-
-			div(layout="row", layout-align="start center", flex="none")
+			div(layout="row", layout-align="start end", flex="none")
 				div(flex="10")
 					md-icon.angular-material-icons#issueCompStatus(style="color:{{$ctrl.statusIcon.colour}}") {{$ctrl.statusIcon.icon}}
 				.issueCompIssueOwner(ng-if="$ctrl.data", layout="row", layout-align="space-between", flex)
