--- a/frontend/account/jade/accountProjects.jade
+++ b/frontend/account/jade/accountProjects.jade
@@ -14,7 +14,7 @@
 						p {{account.account}}
 						md-icon.angular-material-icons.accountProjectsSharedIcon(ng-if="!account.canAddProject") group
 				.accountRight(ng-if="account.canAddProject")
-					md-button.md-icon-button(aria-label="New project", ng-click="vm.newProject($event)")
+					md-button.md-icon-button(aria-label="New project", ng-click="vm.newProject($event, account.account)")
 						md-icon.angular-material-icons.md-accent playlist_add
 
 			// Projects
