--- a/frontend/account/jade/accountProjects.jade
+++ b/frontend/account/jade/accountProjects.jade
@@ -29,6 +29,7 @@
 				on-show-page="vm.showPage(page, callingPage)"
 				on-setup-delete-project="vm.setupDeleteProject(event, project)",
 				quota="vm.quota"
+				account-quota="account.quota"
 				subscriptions="vm.subscriptions")
 			md-divider
 
