ISSUE #281 - Changed position of role indicator in issue

--- a/frontend/issues/css/issues.css
+++ b/frontend/issues/css/issues.css
@@ -325,6 +325,10 @@ issue-comp #descriptionAndComments {
   background: #f0f0f0;
 }
 
+issue-comp #issueRoleIndicator {
+  margin-left: 7px;
+}
+
 /** Issue Screen Shot  ************************************************************************************************/
 #issueScreenShotDialog {
   width:80%;
