--- a/frontend/issues/jade/issueComp.jade
+++ b/frontend/issues/jade/issueComp.jade
@@ -2,21 +2,19 @@ div(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true")
 	div
 		// Title
 		.issueCompItemContainer(layout="column", layout-align="start", flex)
-			div(layout="row")
+			div(layout="row", flex)
 				#issueRoleIndicator
-				div(ng-if="!$ctrl.data")
-					md-input-container#issueCompTitleInput(flex)
-						label Title
-						input(
-						type="text"
-						ng-model="$ctrl.issueData.name"
-						ng-change="$ctrl.nameChange()"
-						ng-disabled="$ctrl.data"
-						aria-label="Title"
-						tdr-focus="true"
-						required)
-				#issueCompTitle(ng-if="$ctrl.data")
-					label {{$ctrl.issueData.name}}
+				md-input-container#issueCompTitleInput(ng-if="!$ctrl.data", flex)
+					label Title
+					input(
+					type="text"
+					ng-model="$ctrl.issueData.name"
+					ng-change="$ctrl.nameChange()"
+					ng-disabled="$ctrl.data"
+					aria-label="Title"
+					tdr-focus="true"
+					required)
+				label#issueCompTitle(ng-if="$ctrl.data") {{$ctrl.issueData.name}}
 
 			div(layout="row", layout-align="start end", flex="none")
 				div(flex="10")
