--- a/frontend/account/jade/accountProjects.jade
+++ b/frontend/account/jade/accountProjects.jade
@@ -22,12 +22,13 @@
 				account-project(
 				ng-repeat="project in account.projects"
 				account="account.name"
+				is-account-admin="account.isAdmin"
 				project="project"
 				user-account="vm.account"
 				on-upload-file="vm.uploadFile(project)"
 				uploaded-file="vm.uploadedFile"
 				on-show-page="vm.showPage(page, callingPage)"
-				on-setup-delete-project="vm.setupDeleteProject(event, project)",
+				on-setup-delete-project="vm.setupDeleteProject(event, project, account)",
 				quota="vm.quota"
 				subscriptions="vm.subscriptions")
 			md-divider
