--- a/frontend/account/jade/accountProjectsetting.jade
+++ b/frontend/account/jade/accountProjectsetting.jade
@@ -27,6 +27,13 @@
 
 			div(layout="row")
 				md-input-container(flex)
+					label Issue topic types
+					textarea(type="text", ng-model="vm.topicTypes")
+					.inputHint One line per topic type
+				md-input-container(flex)
+
+			div(layout="row")
+				md-input-container(flex)
 					label Latitude
 					input(type="text", ng-model="vm.mapTile.lat")
 				md-input-container(flex)
