ISSUE #287 - frontend use custom issue topic types from API

--- a/frontend/issues/jade/issues.jade
+++ b/frontend/issues/jade/issues.jade
@@ -42,6 +42,7 @@ md-progress-circular.importBCFLoading(md-mode="indeterminate", md-diameter="15",
 	keys-down="vm.keysDown"
 	exit="vm.editIssueExit(issue)"
 	send-event="vm.sendEvent(type, value)"
+	project-settings="vm.projectSettings"
 	event="vm.event"
 	issue-created="vm.issueCreated(issue)"
 	content-height="vm.setContentHeight(height)"
