--- a/frontend/project/jade/project.jade
+++ b/frontend/project/jade/project.jade
@@ -16,6 +16,7 @@
 		project="vm.project"
 		branch="vm.branch"
 		revision="vm.revision"
+		project-settings="vm.settings"
 		position="left"
 		style="pointer-events:{{vm.pointerEvents}}"
 		keys-down="vm.keysDown"
