--- a/frontend/panel/jade/panel.jade
+++ b/frontend/panel/jade/panel.jade
@@ -7,6 +7,7 @@ div(ng-show="vm.showPanel")
 			branch="vm.branch"
 			revision="vm.revision"
 			position="vm.position"
+			project-settings="vm.projectSettings"
 			content-data='contentItem'
 			ng-show='contentItem.show',
 			on-height-request="vm.heightRequest(contentItem, height)"
