ISSUE #290 - fix chat server auto comment without screenshot error, missing desc change auto comment and get topic types from project settings and replace the value in auto comments

--- a/frontend/issues/jade/issueComp.jade
+++ b/frontend/issues/jade/issueComp.jade
@@ -102,8 +102,12 @@ div(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true")
 						// Saved auto comment
 						label.issueCompCommentTitle(
 						flex
-						ng-if="comment.action"
-						ng-bind-html="comment.comment")
+						ng-if="comment.action")
+							| {{comment.action.propertyText}} 
+							span.commentTextLight changed from 
+							| {{comment.action.from}} 
+							span.commentTextLight to 
+							| {{comment.action.to}}
 						// Editing normal comment
 						md-input-container(flex, ng-if="comment.editing")
 							textarea(ng-model="comment.comment"
