--- a/frontend/account/jade/federationDialog.jade
+++ b/frontend/account/jade/federationDialog.jade
@@ -11,7 +11,7 @@ md-dialog#federationDialog(aria-label="Federation", flex-lg="80", flex-gt-lg="50
 			div(layout="row", flex)
 				md-input-container(flex="50")
 					input(placeholder="Federation name", tdr-focus="true", ng-model="vm.newFederationData.project", ng-disabled="vm.federationOriginalData")
-					.inputHint(ng-if="!vm.federationOriginalData") Letters, numbers and underscore only
+					.inputHint(ng-if="!vm.federationOriginalData") Letters, numbers, hyphen and underscore only
 
 			div(ng-if="!vm.federationOriginalData" layout="row", flex)
 				md-input-container(flex="50")
