--- a/frontend/issues/css/issues.css
+++ b/frontend/issues/css/issues.css
@@ -231,8 +231,16 @@ issue-comp .issueCompItemContainer div {
   outline: none;
 }
 
+issue-comp #issueCompTitleArea {
+  padding-top: 0;
+}
+
+issue-comp #issueCompInfoArea {
+  margin-top: -10px;
+}
+
 issue-comp #issueCompTitleInput {
-  margin-bottom: -8px;
+  margin: 2px 0 0;
   height: 40px;
 }
 
@@ -242,10 +250,6 @@ issue-comp #issueCompTitle {
 
 issue-comp #issueCompStatus {
   margin: 10px 0 0;
-}
-
-issue-comp textarea {
-  min-height: 70px !important;
 }
 
 issue-comp .issueCompItemStatus {
@@ -316,7 +320,8 @@ issue-comp #issueCompAdditional {
   margin-top: -20px;
 }
 
-issue-comp #issueCompNewComment {
+issue-comp #issueCompNewComment md-input-container {
+  margin: 0 0 -35px;
 }
 
 issue-comp #descriptionAndComments {
@@ -327,6 +332,8 @@ issue-comp #descriptionAndComments {
 
 issue-comp #issueRoleIndicator {
   margin-left: 7px;
+  margin-top: 10px;
+  height: 20px;
 }
 
 /** Issue Screen Shot  ************************************************************************************************/
