--- a/frontend/issues/jade/issueComp.jade
+++ b/frontend/issues/jade/issueComp.jade
@@ -15,39 +15,39 @@ div(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true")
 					required
 					placeholder="Title")
 				label#issueCompTitle(ng-if="$ctrl.data") {{$ctrl.issueData.name}}
-
-			#issueCompInfoArea(layout="row", layout-align="start end", flex="none")
-				div(flex="10")
-					md-icon.angular-material-icons#issueCompStatus(style="color:{{$ctrl.statusIcon.colour}}") {{$ctrl.statusIcon.icon}}
-				.issueCompIssueOwner(ng-if="$ctrl.data", layout="row", layout-align="space-between", flex)
-					label {{$ctrl.data.owner}}
-					label {{$ctrl.data.timeStamp}}
-
-		// Status
-		.issueCompItemContainer#issueCompAdditional(layout="column")
-			div(layout="row", layout-align="start center")
+				span(flex)
 				md-button.md-icon-button#additionalInfoButton(aria-label="Status Toggle", ng-click="$ctrl.toggleShowAdditional()")
 					md-icon.angular-material-icons(ng-if="!$ctrl.showAdditional") keyboard_arrow_right
 					md-icon.angular-material-icons(ng-if="$ctrl.showAdditional") keyboard_arrow_down
-			div(layout="column", ng-if="$ctrl.showAdditional")
-				div(layout="row")
-					md-input-container.issueCompItemStatus(flex)
-						label Priority
-						md-select(ng-model="$ctrl.issueData.priority", ng-change="$ctrl.statusChange()", ng-disabled="!$ctrl.canUpdate")
-							md-option(ng-repeat="priority in $ctrl.priorities", value="{{priority.value}}") {{priority.label}}
-					md-input-container.issueCompItemStatus(flex)
-						label Status
-						md-select(ng-model="$ctrl.issueData.status", ng-change="$ctrl.statusChange()", ng-disabled="!$ctrl.canUpdate")
-							md-option(ng-repeat="status in $ctrl.statuses", value="{{status.value}}") {{status.label}}
-				div(layout="row")
-					md-input-container(flex)
-						label Assign
-						md-select(ng-model="$ctrl.issueData.assigned_roles[0]", ng-change="$ctrl.statusChange()", ng-disabled="!$ctrl.canUpdate")
-							md-option(ng-repeat="role in $ctrl.projectRoles", value="{{role}}") {{role}}
-					md-input-container(flex)
-						label Type
-						md-select(ng-model="$ctrl.issueData.topic_type", ng-change="$ctrl.statusChange()", ng-disabled="!$ctrl.canUpdate")
-							md-option(ng-repeat="type in $ctrl.topic_types", value="{{type.value}}") {{type.label}}
+
+		// Info
+		.issueCompItemContainer#issueCompInfoArea(layout="row", layout-align="start end", flex="none", ng-if="$ctrl.showAdditional")
+			div(flex="10")
+				md-icon.angular-material-icons#issueCompStatus(style="color:{{$ctrl.statusIcon.colour}}") {{$ctrl.statusIcon.icon}}
+			.issueCompIssueOwner(ng-if="$ctrl.data", layout="row", layout-align="space-between", flex)
+				label {{$ctrl.data.owner}}
+				label {{$ctrl.data.timeStamp}}
+
+		// Status
+		.issueCompItemContainer#issueCompAdditional(layout="column", ng-if="$ctrl.showAdditional")
+			div(layout="row")
+				md-input-container.issueCompItemStatus(flex)
+					label Priority
+					md-select(ng-model="$ctrl.issueData.priority", ng-change="$ctrl.statusChange()", ng-disabled="!$ctrl.canUpdate")
+						md-option(ng-repeat="priority in $ctrl.priorities", value="{{priority.value}}") {{priority.label}}
+				md-input-container.issueCompItemStatus(flex)
+					label Status
+					md-select(ng-model="$ctrl.issueData.status", ng-change="$ctrl.statusChange()", ng-disabled="!$ctrl.canUpdate")
+						md-option(ng-repeat="status in $ctrl.statuses", value="{{status.value}}") {{status.label}}
+			div(layout="row")
+				md-input-container(flex)
+					label Assign
+					md-select(ng-model="$ctrl.issueData.assigned_roles[0]", ng-change="$ctrl.statusChange()", ng-disabled="!$ctrl.canUpdate")
+						md-option(ng-repeat="role in $ctrl.projectRoles", value="{{role}}") {{role}}
+				md-input-container(flex)
+					label Type
+					md-select(ng-model="$ctrl.issueData.topic_type", ng-change="$ctrl.statusChange()", ng-disabled="!$ctrl.canUpdate")
+						md-option(ng-repeat="type in $ctrl.topic_types", value="{{type.value}}") {{type.label}}
 
 	md-divider
 
