--- a/frontend/issues/jade/issueComp.jade
+++ b/frontend/issues/jade/issueComp.jade
@@ -1,22 +1,29 @@
 div(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true")
 	div
 		// Title
-		.issueCompItemContainer#issueCompTitleArea(layout="column", layout-align="start", flex)
-			div(layout="row", flex)
-				#issueRoleIndicator
-				md-input-container#issueCompTitleInput(ng-if="!$ctrl.data", flex, md-no-float)
-					input(
-					type="text"
-					ng-model="$ctrl.issueData.name"
-					ng-change="$ctrl.nameChange()"
-					ng-disabled="$ctrl.data"
-					aria-label="Title"
-					tdr-focus="true"
-					required
-					placeholder="Title")
-				label#issueCompTitle(ng-if="$ctrl.data") {{$ctrl.issueData.name}}
-				span(flex)
-				md-button.md-icon-button#additionalInfoButton(aria-label="Status Toggle", ng-click="$ctrl.toggleShowAdditional()")
+		.issueCompItemContainer#issueCompTitleArea(
+		layout="column"
+		layout-align="start"
+		flex
+		ng-class="{issueCompTitleArea: $ctrl.data}"
+		ng-click="$ctrl.toggleShowAdditional()")
+			div(layout="row", flex, layout-align="space-between")
+				div(layout="row", flex)
+					#issueRoleIndicator
+					md-input-container#issueCompTitleInput(ng-if="!$ctrl.data", flex, md-no-float)
+						input(
+						type="text"
+						ng-model="$ctrl.issueData.name"
+						ng-change="$ctrl.nameChange()"
+						ng-disabled="$ctrl.data"
+						aria-label="Title"
+						tdr-focus="true"
+						required
+						placeholder="Title",
+						ng-click="$ctrl.titleInputClick($event)")
+					label#issueCompTitle(ng-if="$ctrl.data") {{$ctrl.issueData.name}}
+				span(flex="5")
+				md-button.md-icon-button#additionalInfoButton(aria-label="Status Toggle")
 					md-icon.angular-material-icons(ng-if="!$ctrl.showAdditional") keyboard_arrow_right
 					md-icon.angular-material-icons(ng-if="$ctrl.showAdditional") keyboard_arrow_down
 
