Revert "Merge remote-tracking branch 'origin/staging' into staging"
This reverts commit 37aeeb29d4c552913c59269c57ae1b98d7a68215, reversing
changes made to fef17b1c93621d400030dd99119638343e250dd8.

--- a/frontend/privacy/css/privacy.css
+++ b/frontend/privacy/css/privacy.css
@@ -1,3 +1,15 @@
 privacy .md-toolbar-tools img {
     width: 150px;
 }
+
+privacy-text {
+    position: absolute;
+    z-index: 3;
+    background: #FDFDFD;
+    color: rgba(0, 0, 0, 0.8);
+    padding: 10px 50px;
+    height: calc(100% - 64px);
+    overflow-y: auto;
+    overflow-x: hidden;
+
+}
