ISSUE #290 - remove showing timestamp in frontend invoice listing page

--- a/frontend/account/jade/accountBilling.jade
+++ b/frontend/account/jade/accountBilling.jade
@@ -92,7 +92,7 @@
 							md-input-container(flex="10")
 								input(type="text", value="{{billing.invoiceNo}}", ng-disabled="true", aria-label="number")
 							md-input-container(flex="15")
-								input(type="text", value="{{billing.createdAt | date:'dd-MM-yyyy'}}", ng-disabled="true", aria-label="date")
+								input(type="text", value="{{billing.createdAtDate | date:'dd-MM-yyyy'}}", ng-disabled="true", aria-label="date")
 							md-input-container(flex="15")
 								input(type="text", value="{{billing.status}}", ng-disabled="true", aria-label="status")
 							md-input-container(flex="25")
