--- a/jade/issues.jade
+++ b/jade/issues.jade
@@ -3,9 +3,9 @@ html(lang="en" ng-app="3drepo").ng-scope
 	script(type="text/javascript", src="/public/plugins/base/config.js")
 	head
 		each issueTypeIssues, issueType in issues
-			if issueType === "open"
+			if issueType === "open" && issueTypeIssues.length > 0
 				h2 Open Issues
-			else if issueType === "closed"
+			else if issueType === "closed" && issueTypeIssues.length > 0
 				h2 Closed Issues
 			each issue in issueTypeIssues
 				table(border=0)
@@ -17,11 +17,25 @@ html(lang="en" ng-app="3drepo").ng-scope
 							td(colspan=2) 
 								a(href=url(issue.viewpoint.screenshot) target='_blank')
 									img(src=url(issue.viewpoint.screenshotSmall))
-					if issue.assigned_roles
-						tr
-							td(colspan=2)
-								b Assigned:
-								span [!{issue.assigned_roles.join(",")}]
+
+					tr
+						td(colspan=2)
+							b Assigned:
+							span [!{issue.assigned_roles.join(",")}] 
+
+							b Priority: 
+							span !{issue.priority} 
+
+							b Status: 
+							span !{issue.status} 
+
+							b Type: 
+							span !{issue.topic_type}
+
+					tr
+						td(colspan=2)
+							b Description: 
+							span !{issue.desc}
 					tr
 						td !{issue.owner} [!{issue.created}]
 						td Issue Opened....
