ISSUE #304 - fix checking show resolved issues, go back and go into the project again, still showing resolved issues even if the option is not checked

--- a/frontend/issues/jade/issues.jade
+++ b/frontend/issues/jade/issues.jade
@@ -32,7 +32,9 @@ md-progress-circular.importBCFLoading(md-mode="indeterminate", md-diameter="15",
 	menu-option="vm.selectedMenuOption"
 	user-roles="vm.projectUserRoles"
 	tree-map="vm.treeMap"
-	selected-issue="vm.selectedIssue")
+	selected-issue="vm.selectedIssue"
+	issue-display="vm.issueDisplay"
+	)
 
 	// Issue
 	issue-comp(
