--- a/frontend/issues/jade/issueComp.jade
+++ b/frontend/issues/jade/issueComp.jade
@@ -48,7 +48,7 @@ div(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true")
 						md-option(ng-repeat="priority in $ctrl.priorities", value="{{priority.value}}") {{priority.label}}
 				md-input-container.issueCompItemStatus(flex)
 					label Status
-					md-select(ng-model="$ctrl.issueData.status", ng-change="$ctrl.statusChange()", ng-disabled="!$ctrl.canUpdate")
+					md-select(ng-model="$ctrl.issueData.status", ng-change="$ctrl.statusChange()", ng-disabled="!$ctrl.canUpdateStatus")
 						md-option(ng-repeat="status in $ctrl.statuses", value="{{status.value}}", ng-disabled="status.disabled") {{status.label}}
 			div(layout="row")
 				md-input-container(flex)
