ISSUE #300 ensure values in slider position doesn't go overboard

--- a/frontend/clip/jade/clip.jade
+++ b/frontend/clip/jade/clip.jade
@@ -22,4 +22,4 @@ div(layout="column", layout-align="start center", flex, layout-fill)
 						ng-model="vm.distance"
 						ng-disabled="!vm.visible"
 					)
-					| &nbsp;%
+					| &nbsp;{{vm.units}}
