--- a/frontend/tree/jade/tree.jade
+++ b/frontend/tree/jade/tree.jade
@@ -26,7 +26,7 @@ tdr-progress(ng-if="vm.showProgress", info="vm.progressInfo")
 				// Name
 				div(flex, layout="row", layout-align="start center")
 					p(ng-if="!item.status") {{item.name}}
-					p.noAccessName(ng-if="item.status") Name {{item.name}}
+					p.noAccessName(ng-if="item.status") {{item.name}}
 				// Toggle visibility
 				md-button.md-icon-button.md-primary.toggleButton(aria-label="Toggle Visible", ng-click="vm.toggleTreeNode(item)", ng-if="!item.status")
 					md-icon.angular-material-icons(ng-if="item.toggleState==='visible'") visibility
