ISSUE #304 - better error messages for forgot password

--- a/frontend/passwordForgot/jade/passwordForgot.jade
+++ b/frontend/passwordForgot/jade/passwordForgot.jade
@@ -10,7 +10,7 @@
 				input(type='text', ng-model='vm.username', ng-required, autofocus)
 			md-input-container.md-block
 				label Email
-				input(type='email', ng-model='vm.email', ng-required, ng-keypress="vm.requestPasswordChange($event)")
+				input(type='text', ng-model='vm.email', ng-required, ng-keypress="vm.requestPasswordChange($event)")
 			div(layout="column", layout-align="start start")
 				md-button.md-raised.md-accent(ng-click="vm.requestPasswordChange()") Request Password Change
 				div(layout="row", layout-align="start center")
