--- a/frontend/contact/jade/contact.jade
+++ b/frontend/contact/jade/contact.jade
@@ -14,7 +14,7 @@
 						input(type="text", ng-model="vm.contact.name")
 					md-input-container.md-block
 						label Email
-						input(type="email", ng-model="vm.contact.email")
+						input(type="email", ng-model="vm.contact.email" ng-pattern="vm.emailRegex")
 					// Extra hidden input to prevent input autofill
 					input(type="email", ng-show="false")
 
