ISSUE #304 - missing role filter

--- a/frontend/issues/jade/issues.jade
+++ b/frontend/issues/jade/issues.jade
@@ -34,6 +34,7 @@ md-progress-circular.importBCFLoading(md-mode="indeterminate", md-diameter="15",
 	tree-map="vm.treeMap"
 	selected-issue="vm.selectedIssue"
 	issue-display="vm.issueDisplay"
+	available-roles="vm.availableRoles"
 	)
 
 	// Issue
