--- a/frontend/panel/jade/panelCardOptionMenu.jade
+++ b/frontend/panel/jade/panelCardOptionMenu.jade
@@ -7,7 +7,8 @@ md-menu(md-position-mode="target-right target", md-offset="2 14")
 				div(layout="column" flex)
 					div(layout="row" flex)
 						md-icon(md-font-icon="{{menuItem.icon}}", class="fa", ng-if="menuItem.noToggle")
-						md-icon(md-font-icon="fa-check", class="fa", ng-if="menuItem.selected")
+						md-icon(md-font-icon="fa-check", class="fa", ng-if="!menuItem.keepCheckSpace && menuItem.selected")
+						md-icon(md-font-icon="fa-check", class="fa", ng-if="menuItem.keepCheckSpace" ng-style="{'visibility': menuItem.selected?'visible':'hidden'}")
 						p(flex="") {{menuItem.label}}
 						md-icon(md-font-icon="{{menuItem.firstSelectedIcon}}", class="fa", ng-if="menuItem.firstSelected")
 						md-icon(md-font-icon="{{menuItem.secondSelectedIcon}}", class="fa", ng-if="menuItem.secondSelected")
