--- a/frontend/clip/jade/clip.jade
+++ b/frontend/clip/jade/clip.jade
@@ -19,7 +19,7 @@ div(layout="column", layout-align="start center", flex, layout-fill)
 				div(flex, layout="row")
 					input(
 						flextype="number"
-						ng-model="vm.distance"
+						ng-model="vm.displayDistance"
 						ng-disabled="!vm.visible"
 					)
 					| &nbsp;{{vm.units}}
