ISSUE #304 - hide show sub project issues for non fed project; fix getHex error

--- a/frontend/panel/jade/panelCardOptionMenu.jade
+++ b/frontend/panel/jade/panelCardOptionMenu.jade
@@ -5,6 +5,7 @@ md-menu(md-position-mode="target-right target", md-offset="2 14")
 		md-menu-item(ng-repeat="menuItem in vm.menu")
 			md-button(ng-click="vm.menuItemSelected($index)")
 				div(layout="column" flex)
+					md-divider(ng-if="menuItem.upperDivider" flex)
 					div(layout="row" flex)
 						md-icon(md-font-icon="{{menuItem.icon}}", class="fa", ng-if="menuItem.noToggle")
 						md-icon(md-font-icon="fa-check", class="fa", ng-if="!menuItem.keepCheckSpace && menuItem.selected")
