ISSUE #304 - ui changes: add user manual button in the account drop down list; remove (-) button to hide details in issue create/edit model

--- a/frontend/account/jade/accountMenu.jade
+++ b/frontend/account/jade/accountMenu.jade
@@ -7,6 +7,10 @@ md-menu#accountMenu(md-position-mode="target-right target")
 				md-icon.angular-material-icons(md-menu-align-target) view_list
 				| Projects
 		md-menu-item
+			md-button(ng-click="vm.openUserManual()")
+				md-icon.angular-material-icons(md-menu-align-target) description
+				| User Manual
+		md-menu-item
 			md-button(ng-click="vm.logout()")
 				md-icon.angular-material-icons exit_to_app
 				| Logout
