ISSUE #310 disable all hot keys for issues, also disables toggling additional information when issue title input box has focus

--- a/frontend/issues/jade/issueComp.jade
+++ b/frontend/issues/jade/issueComp.jade
@@ -16,6 +16,8 @@ div(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true")
 						ng-model="$ctrl.issueData.name"
 						ng-change="$ctrl.nameChange()"
 						ng-disabled="$ctrl.data"
+						ng-focus="$ctrl.textInputHasFocus(true)"
+						ng-blur="$ctrl.textInputHasFocus(false)"
 						aria-label="Title"
 						tdr-focus="true"
 						required
