--- a/frontend/issues/jade/issueComp.jade
+++ b/frontend/issues/jade/issueComp.jade
@@ -174,9 +174,10 @@ div(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true")
 			ng-if="!actionData.hidden")
 				md-tooltip(md-direction="bottom") {{actionData.label}}
 				md-icon.angular-material-icons(style="color:{{actionData.selected ? '#FF9800' : ''}}") {{actionData.icon}}
-		md-button.md-fab.md-mini(aria-label="Submit", ng-disabled="$ctrl.submitDisabled", ng-click="$ctrl.submit()")
+		md-button.md-fab.md-mini(aria-label="Submit", ng-disabled="$ctrl.submitDisabled", ng-click="$ctrl.submit()" ng-if="!$ctrl.saving")
 			md-tooltip(md-direction="bottom") Submit
 			md-icon.angular-material-icons save
+		md-progress-circular(md-diameter="20px", md-mode="indeterminate" ng-if="$ctrl.saving")
 
 	// Action components
 	issues-pin(
