--- a/frontend/account/jade/projectDialog.jade
+++ b/frontend/account/jade/projectDialog.jade
@@ -28,17 +28,17 @@ md-dialog.newProjectDialog(aria-label="New project")
 					md-option(ng-repeat="unit in vm.units", value="{{unit.value}}") {{unit.name}}
 
 
-			md-input-container(ng-if="vm.newProjectFileSelected")
+			md-input-container(ng-if="vm.newProjectFileToUpload")
 				input(placeholder="Revision name (optional)", ng-model="vm.tag")
 				.inputHint Letters, numbers and underscore only
 
-			md-input-container(ng-if="vm.newProjectFileSelected")
+			md-input-container(ng-if="vm.newProjectFileToUpload")
 				textarea(placeholder="Revision description (optional)", ng-model="vm.desc")
 
 			md-input-container
 				md-button.md-accent(ng-click="vm.uploadFileForNewProject()") Upload File
 				md-button.md-raised.md-accent(ng-disabled="vm.newProjectButtonDisabled", ng-click="vm.saveNewProject()") Save
-			#projectDialogFilenameContainer(layout="row", ng-if="vm.newProjectFileSelected")
+			#projectDialogFilenameContainer(layout="row", ng-if="vm.newProjectFileToUpload")
 				p#projectDialogFilenameIntro Selected file
 				p#projectDialogFilename {{vm.newProjectFileToUpload.name}}
 			p#projectDialogError(ng-if="vm.showNewProjectErrorMessage") {{vm.newProjectErrorMessage}}
