--- a/frontend/issues/jade/issueComp.jade
+++ b/frontend/issues/jade/issueComp.jade
@@ -81,7 +81,7 @@ div(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true")
 							ng-focus="$ctrl.textInputHasFocus(true)"
 							ng-blur="$ctrl.textInputHasFocus(false)")
 						.issueCompTextActions(layout="row", ng-if="$ctrl.canEditDescription")
-							md-button.md-icon-button.md-accent(aria-label="Edit Comment", ng-click="$ctrl.toggleEditDescription($event)")
+							md-button.md-icon-button.md-accent(aria-label="Edit Comment", ng-click="$ctrl.toggleEditDescription($event)", ng-if="$ctrl.canUpdate")
 								md-tooltip(md-direction="bottom") edit
 								md-icon.angular-material-icons(style="color:{{$ctrl.editCommentColor}}") mode_edit
 				.issueCompThumbnail(
@@ -158,9 +158,11 @@ div(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true")
 			ng-change="$ctrl.commentChange()"
 			ng-focus="$ctrl.textInputHasFocus(true)"
 			ng-blur="$ctrl.textInputHasFocus(false)"
-			placeholder="Comment")
+			ng-disabled="!$ctrl.canComment"
+			placeholder="{{$ctrl.canComment ? 'Comment' : 'You do not have permission to leave comments'}}")
 		.issueCompThumbnail(layout="row", layout-align="center", ng-if="$ctrl.commentThumbnail", ng-click="$ctrl.showThumbnail()")
 			img.issueCompThumbnailImage(ng-src="{{$ctrl.commentThumbnail}}")
+
 
 	md-divider
 
