ISSUE #312 fix assigned license count

--- a/frontend/account/jade/accountLicenses.jade
+++ b/frontend/account/jade/accountLicenses.jade
@@ -39,7 +39,7 @@
 					md-content#accountLicensesList
 						section
 							md-subheader
-								div Licenses ({{vm.numLicenses}} assigned, {{vm.numLicenses}} total)
+								div Licenses ({{vm.numLicensesAssigned}} assigned, {{vm.numLicenses}} total)
 						md-list-item(ng-repeat="license in vm.licenses", layout="row", layout-align="space-between", flex)
 							div(layout="row", layout-align="start center", flex)
 								md-icon.angular-material-icons.licenseIcon(aria-label="Person") person
