--- a/frontend/issues/jade/issueComp.jade
+++ b/frontend/issues/jade/issueComp.jade
@@ -107,14 +107,7 @@ div(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true")
 						ng-if="!comment.editing && !comment.action"
 						ng-bind-html="comment.comment | linky:'_blank'")
 						// Saved auto comment
-						label.issueCompCommentTitle(
-						flex
-						ng-if="comment.action")
-							| {{comment.action.propertyText}} 
-							span.commentTextLight changed from 
-							| {{comment.action.from}} 
-							span.commentTextLight to 
-							| {{comment.action.to}}
+
 						// Editing normal comment
 						md-input-container(flex, ng-if="comment.editing")
 							textarea(ng-model="comment.comment"
@@ -132,11 +125,19 @@ div(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true")
 								md-icon.angular-material-icons close
 					// Info
 					.issueCompCommentOwner(
-					ng-if="$ctrl.data"
+					ng-if="$ctrl.data && !comment.action"
 					layout="row"
 					layout-align="space-between"
 					flex)
 						label {{comment.owner}}
+						label {{comment.timeStamp}}
+					// Or Auto comment
+					.issueCompAutoComment(
+					ng-if="comment.action"
+					layout="row"
+					layout-align="space-between"
+					flex)
+						label {{comment.action.propertyText}}:  "{{comment.action.from}}" -> "{{comment.action.to}}" by {{comment.owner}}
 						label {{comment.timeStamp}}
 
 				// Thumbnail
