ISSUE #313 change address on billing

--- a/jade/invoice.jade
+++ b/jade/invoice.jade
@@ -39,10 +39,9 @@ html(lang="en" ng-app="3drepo")
 						#billingCompanyAddress(layout="row", layout-align="start start", class="layout-align-start-start layout-row")
 							div(layout="column", class="layout-column flex-45", flex="45")
 								label.md-title 3D Repo
-								label c/o EIT Digital
-								label Centre House Block C
-								label 56 Wood Lane
-								label London W12 7SB
+								label 20 Eastbourne Terrace
+								label London
+								label W2 6LG
 								label United Kingdom
 								label VAT registration: GB 206 9090 15
 								label
