--- a/frontend/billing/jade/billing.jade
+++ b/frontend/billing/jade/billing.jade
@@ -14,10 +14,9 @@ div(layout-fill, layout="column")
 			#billingCompanyAddress(layout="row", layout-align="start start")
 				div(layout="column", flex="45")
 					label.md-title 3D Repo
-					label c/o EIT Digital
-					label Centre House Block C
-					label 56 Wood Lane
-					label London W12 7SB
+					label 20 Eastbourne Terrace
+					label London
+					label W2 6LG
 					label United Kingdom
 					label VAT registration: GB 206 9090 15
 					label
