--- a/frontend/project/jade/project.jade
+++ b/frontend/project/jade/project.jade
@@ -28,6 +28,7 @@
 		account="vm.account"
 		project="vm.project"
 		branch="vm.branch"
+		tree-map="vm.treeMap"
 		revision="vm.revision"
 		position="right"
 		style="pointer-events:{{vm.pointerEvents}}")
