--- a/frontend/tree/jade/tree.jade
+++ b/frontend/tree/jade/tree.jade
@@ -12,8 +12,7 @@ tdr-progress(ng-if="vm.showProgress", info="vm.progressInfo")
 			layout="row"
 			layout-align="start center"
 			flex
-			ng-class="{treeNodeSelected: item.selected}"
-			ng-click="vm.selectNode(item)")
+			ng-class="{treeNodeSelected: item.selected}")
 				// Expand/collapse
 				md-button.md-icon-button.md-primary.expandButton(aria-label="Toggle Expand", ng-click="vm.expand($event, item._id)", ng-if="!item.status")
 					md-icon.angular-material-icons(ng-if="!item.expanded && item.hasChildren") add_box
@@ -24,7 +23,8 @@ tdr-progress(ng-if="vm.showProgress", info="vm.progressInfo")
 					md-icon.angular-material-icons(ng-if="item.status==='NO_ACCESS'") do_not_disturb
 					md-icon.angular-material-icons(ng-if="item.status==='NOT_FOUND'") error_outline
 				// Name
-				div(flex, layout="row", layout-align="start center")
+				div(flex, layout="row", layout-align="start center"
+								ng-click="vm.selectNode(item)")
 					p(ng-if="!item.status") {{item.name}}
 					p.noAccessName(ng-if="item.status") Name {{item.name}}
 				// Toggle visibility
