--- a/frontend/account/jade/federationDialog.jade
+++ b/frontend/account/jade/federationDialog.jade
@@ -10,7 +10,7 @@ md-dialog#federationDialog(aria-label="Federation", flex-lg="80", flex-gt-lg="50
 			// Federation name
 			div(layout="row", flex)
 				md-input-container(flex="50")
-					input(placeholder="Federation name", tdr-focus="true", ng-model="vm.newFederationData.project", ng-disabled="vm.federationOriginalData")
+					input(placeholder="Federation name", tdr-focus="true", ng-model="vm.newFederationData.project", ng-disabled="vm.federationOriginalData", ng-pattern="vm.projectRegExp" maxlength=20)
 					.inputHint(ng-if="!vm.federationOriginalData") Letters, numbers, hyphen and underscore only
 
 			div(ng-if="!vm.federationOriginalData" layout="row", flex)
