ISSUE #328 - change pricing link

--- a/frontend/login/jade/login.jade
+++ b/frontend/login/jade/login.jade
@@ -28,5 +28,5 @@
 					div(layout="row", layout-align="start center", flex="none")
 						a.loginLinks(href="passwordForgot") Forgot password?
 					div(layout="row", layout-align="start center", flex="none")
-						a.loginLinks(href="pricing") Sign up
+						a.loginLinks(href="http://3drepo.org/pricing/") Sign up
 					h2.md-subhead#loginVersion Version: {{vm.version}}
