--- a/frontend/signUp/jade/signUpForm.jade
+++ b/frontend/signUp/jade/signUpForm.jade
@@ -62,5 +62,5 @@ form
 			md-progress-circular(md-mode="indeterminate", md-diameter="20")
 	h4.registerError {{vm.registerErrorMessage}}
 	div
-		a.registerLinks(target="_blank", href="/pricing") Pricing
+		a.registerLinks(target="_blank", href="http://3drepo.org/pricing/") Pricing
 		a.registerLinks(href="/") Log in
